# TAS

./: .gitignore  CLAUDE.md  README.md  audit_final_comprehensive.py  repair_capacitors_wrapper.py  repair_quarantine_wrapper_corruption.py  resolve_ndjson_conflicts.py
data/: add_resistor_urls.py  analog_ics.ndjson  bjts.ndjson  bjts.quarantine_incomplete.ndjson  capacitors.ndjson  capacitors.quarantine_duplicates.ndjson  capacitors.quarantine_eaton_missing_shape.ndjson  capacitors.quarantine_invalid_physics.ndjson  capacitors.quarantine_stubs.ndjson  capacitors.quarantine_unverified.ndjson  capacitors.quarantine_wurth_other.ndjson  circuits.ndjson  circuits.quarantine_defects.ndjson  connectors.ndjson  connectors.quarantine_bad_pitch.ndjson  connectors.quarantine_dk.ndjson  connectors.quarantine_incomplete.ndjson  connectors.quarantine_legacy.ndjson  connectors.quarantine_misfiled_inductors.ndjson  controllers.ndjson  controllers.pre-ctas.backup.ndjson  controllers.quarantine_nonctrl.ndjson  controllers.quarantine_sparse.ndjson  controllers.quarantine_unverified.ndjson  converters.ndjson  converters.quarantine_telemetry.ndjson  converters.v1.backup.ndjson  diodes.ndjson  diodes.quarantine_duplicates.ndjson  diodes.quarantine_eaton.ndjson  diodes.quarantine_incomplete.ndjson  diodes.quarantine_invalid_physics.ndjson  diodes.quarantine_missing_vf.ndjson  diodes.quarantine_synthetic.ndjson  diodes.quarantine_unverified.ndjson  diodes_bak_ti.ndjson  igbts.ndjson  igbts.quarantine.ndjson  (+44 more)
validator/: .gitignore  BLADE_RUNNER_AUDIT.md  BUILD.md  CMakeLists.txt  build_beads.py  execute_cleanup.py  inspect_findings.py  promote_clean.py  quarantine_invalid.py  rescue_report.py  sweep.py  triage_quarantine.py
validator/include/tas_validator/: eseries.hpp  helpers.hpp  thresholds.hpp  validator.hpp
validator/src/: analog.cpp  bindings.cpp  bjts.cpp  capacitors.cpp  connectors.cpp  controllers.cpp  corpus.cpp  diodes.cpp  eseries.cpp  helpers.cpp  igbts.cpp  magnetics.cpp  mosfets.cpp  resistors.cpp  time_bases.cpp  validator.cpp  varistors.cpp
validator/tests/: test_validator.cpp
(+148 files in other folders)
